# docs/swagger.json
@@ -16,9 +16,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/configo/config": {
+        "/configo/v1/config": {
             "get": {
-                "description": "Get config by id",
+                "description": "Get config by key",
                 "consumes": [
                     "application/json"
                 ],
@@ -32,8 +32,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "config id",
-                        "name": "id",
+                        "description": "config key",
+                        "name": "key",
                         "in": "query",
                         "required": true
                     }
@@ -42,7 +42,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/configo.GetConfigResponse"
+                            "$ref": "#/definitions/models.GetConfigResponse"
                         }
                     },
                     "400": {
@@ -70,7 +70,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/configo.UpdateConfigRequest"
+                            "$ref": "#/definitions/models.UpdateConfigRequest"
                         }
                     }
                 ],
@@ -88,7 +88,7 @@
                 }
             }
         },
-        "/configo/metadata": {
+        "/configo/v1/metadata": {
             "get": {
                 "description": "Get all config keys",
                 "consumes": [
@@ -105,7 +105,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/configo.configMetadataResponse"
+                            "$ref": "#/definitions/models.ConfigMetadataResponse"
                         }
                     },
                     "400": {
@@ -115,7 +115,7 @@
                 }
             }
         },
-        "/configo/web/": {
+        "/configo/v1/web/": {
             "get": {
                 "description": "UI",
                 "consumes": [
@@ -144,7 +144,30 @@
         }
     },
     "definitions": {
-        "configo.ConfigInfo": {
+        "constants.ConfigType": {
+            "type": "string",
+            "enum": [
+                "string",
+                "number",
+                "boolean",
+                "json",
+                "bigText",
+                "choice",
+                "parent",
+                "list"
+            ],
+            "x-enum-varnames": [
+                "CONFIG_TYPE_STRING",
+                "CONFIG_TYPE_NUMBER",
+                "CONFIG_TYPE_BOOLEAN",
+                "CONFIG_TYPE_JSON",
+                "CONFIG_TYPE_BIG_TEXT",
+                "CONFIG_TYPE_CHOICE",
+                "CONFIG_TYPE_PARENT",
+                "CONFIG_TYPE_LIST"
+            ]
+        },
+        "models.ConfigInfo": {
             "type": "object",
             "properties": {
                 "configKeys": {
@@ -155,13 +178,24 @@
                 }
             }
         },
-        "configo.ConfigObject": {
+        "models.ConfigMetadataResponse": {
+            "type": "object",
+            "properties": {
+                "configInfo": {
+                    "$ref": "#/definitions/models.ConfigInfo"
+                },
+                "serviceInfo": {
+                    "$ref": "#/definitions/models.ServiceInfo"
+                }
+            }
+        },
+        "models.ConfigObject": {
             "type": "object",
             "properties": {
                 "children": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/configo.ConfigObject"
+                        "$ref": "#/definitions/models.ConfigObject"
                     }
                 },
                 "choices": {
@@ -180,46 +214,35 @@
                     "type": "boolean"
                 },
                 "type": {
-                    "$ref": "#/definitions/configo.ConfigType"
+                    "$ref": "#/definitions/constants.ConfigType"
                 },
                 "value": {}
             }
         },
-        "configo.ConfigType": {
-            "type": "string",
-            "enum": [
-                "string",
-                "number",
-                "boolean",
-                "json",
-                "big_text",
-                "choice",
-                "parent",
-                "list"
-            ],
-            "x-enum-varnames": [
-                "CONFIG_TYPE_STRING",
-                "CONFIG_TYPE_NUMBER",
-                "CONFIG_TYPE_BOOLEAN",
-                "CONFIG_TYPE_JSON",
-                "CONFIG_TYPE_BIG_TEXT",
-                "CONFIG_TYPE_CHOICE",
-                "CONFIG_TYPE_PARENT",
-                "CONFIG_TYPE_LIST"
-            ]
-        },
-        "configo.GetConfigResponse": {
+        "models.GetConfigResponse": {
             "type": "object",
             "properties": {
                 "configs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/configo.ConfigObject"
+                        "$ref": "#/definitions/models.ConfigObject"
                     }
+                },
+                "createdAt": {
+                    "type": "integer"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "integer"
+                },
+                "updatedBy": {
+                    "type": "string"
                 }
             }
         },
-        "configo.ServiceInfo": {
+        "models.ServiceInfo": {
             "type": "object",
             "properties": {
                 "description": {
@@ -230,28 +253,17 @@
                 }
             }
         },
-        "configo.UpdateConfigRequest": {
+        "models.UpdateConfigRequest": {
             "type": "object",
             "properties": {
                 "configs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/configo.ConfigObject"
+                        "$ref": "#/definitions/models.ConfigObject"
                     }
                 },
-                "id": {
+                "key": {
                     "type": "string"
-                }
-            }
-        },
-        "configo.configMetadataResponse": {
-            "type": "object",
-            "properties": {
-                "configInfo": {
-                    "$ref": "#/definitions/configo.ConfigInfo"
-                },
-                "serviceInfo": {
-                    "$ref": "#/definitions/configo.ServiceInfo"
                 }
             }
         }
